test/fail/tuple_param16.v3
//@seman
def id<T>(x: T) -> T { return x; }
def x = id(0, 9);
